fix(docs): documentation layout issue
- Update documentation layout to align with design

--- a/docs/.vitepress/vitepress/styles/sidebar.scss
+++ b/docs/.vitepress/vitepress/styles/sidebar.scss
@@ -9,6 +9,7 @@
   z-index: var(--sidebar-z-index);
   width: var(--sidebar-width-xs);
   background-color: var(--bg-color);
+  padding: 47px 32px 0;
   overflow-y: auto;
   transform: translate(-100%);
   transition: background-color 0.5s, opacity 0.25s,
@@ -18,37 +19,11 @@
     transform: translate(0);
   }
 
-  // .nav.sponsors {
-  //   padding: 2rem 1.5rem 0 1.5rem;
-
-  //   .sponsors-list {
-  //     display: flex;
-  //     align-items: center;
-  //     padding: 0;
-  //     margin: 0;
-  //   }
-
-  //   .sponsors-title {
-  //     margin-top: 0;
-  //     color: #777;
-  //     font-weight: 300;
-  //     font-size: 0.9rem;
-  //   }
-
-  //   .sponsor-item {
-  //     margin-right: 0.5rem;
-  //   }
-
-  //   img {
-  //     width: 2.2rem;
-  //   }
-  // }
-
   .sidebar-groups {
     padding: 0.75rem 0 5rem;
 
     .sidebar-group__title {
-      padding: 0.35rem 1.5rem 0.35rem 1.25rem;
+      padding: 0.35rem 0;
       font-size: 1rem;
       font-weight: 700;
       margin: 0;
@@ -75,7 +50,7 @@
   }
 
   @include respond-to('xxl') {
-    padding: 0 32px 96px calc((100% - var(--vp-screen-max-width)) / 2.2);
+    padding: 0 32px 96px calc((100% - var(--vp-screen-max-width)) / 2);
     width: calc(
       (100% - var(--vp-screen-max-width)) / 2 + var(--vp-sidebar-width-small)
     );
